fix weird spacing on large image

--- a/kydeveloper/src/app/pages/portfolio/portfolio-single/portfolio-single.component.scss
+++ b/kydeveloper/src/app/pages/portfolio/portfolio-single/portfolio-single.component.scss
@@ -308,6 +308,7 @@ $margin-bottom: 20px;
         position:relative;
         left:0px;
         width: 100%;
+        margin-right:0px;
 
         .back {
             &.back-content {
@@ -345,8 +346,7 @@ $margin-bottom: 20px;
 
     :host /deep/ .post-content {
         img {
-           position:relative;
-           left:-25px;
+           margin-left:-25px;
            max-width: calc(100% + 50px);
         }
    }
